@@ -4,8 +4,8 @@ AUX nagios-plugins-1.4.10-contrib.patch 1610 RMD160 928e2ce0a8071b5fd93ca2872251
 AUX nagios-plugins-1.4.10-noradius.patch 1029 RMD160 e1e449d93966d822eca21782968e24fce4547a95 SHA1 e5e6758790cc85db9f028cde3fb3d6611356167e SHA256 bff601e67a413abd84c2b430bfcf10395f68a83f98a628a398ee50f7cb406229
 AUX nagios-plugins-1.4.11-autoconf-2.62.patch 558 RMD160 d9cbf67c2434ddc9971f95ccd7afd787f1e928b4 SHA1 67fcf7f4e9a72a743a37202e7475e47e13875483 SHA256 55656ea0a2e3daa60c906a099499fc1e7683720aa5f4adeebd149072dbe41dfe
 DIST nagios-plugins-1.4.11.tar.gz 1734230 RMD160 4f33e796f8eac2d8d13cbecbcc1191857e1b5f15 SHA1 bc91a57ad6f5468b17f24429ba25225cfff45d59 SHA256 2cc1534a7f41da6cdb72d595c8643e62491fbab1bb768ab113eff20581ac05e5
-EBUILD nagios-plugins-1.4.11-r1.ebuild 3686 RMD160 c8613aaf4f3e5971329139a85b6a11d78eea836a SHA1 d7a67fbe63de1d4507a822ff8c36dccaaa22bdc7 SHA256 d4d89a7dbccb7c35dd85f8f557d77ed542fa81494ba07152f298c757fcb93e6e
-EBUILD nagios-plugins-1.4.11-r102.ebuild 3728 RMD160 98a98659b5d25024f2e2b51122fb4c12c3dfde28 SHA1 6beb315d295d63823aac22ac7a402082f8b1b23d SHA256 c915e78e9e7f5f917250943d821c3dfece3eb4c5e7f83676a026d56331a38486
-EBUILD nagios-plugins-1.4.11.ebuild 3632 RMD160 5e03e6d015ec41a3313132a94610723f286f603c SHA1 c00357d5af45f402240c525fa8a26d91abc8866b SHA256 b562eb6d03998430e65f59b036daa972f73001e63d25c6a7248f8ae68c02843f
-MISC ChangeLog 793 RMD160 08b7c905373e4d6d54349f6dbb8bb6b3078dbaed SHA1 2327c0897c7c76a6e3e03d78d92b83136e9d6749 SHA256 a533d1097e27378a8fff224812fe0df0d4a73e78d97e5340ef7112cb5f8475ce
+EBUILD nagios-plugins-1.4.11-r1.ebuild 3694 RMD160 930dd27e1271bce2de4a6d711d1bd451d9906778 SHA1 2f9f44f84a1d7a98a6852b5e2e42190ec99b377d SHA256 e7751b2dfae4d051cb0121ce16581fa0a057e7a98e3169216da87be52c8d45ff
+EBUILD nagios-plugins-1.4.11-r102.ebuild 3734 RMD160 b1f30bc26202a013842194528df18f2ed1ab90f7 SHA1 e49a8885cad6f2867675bf50cd55939e87c91d8a SHA256 596d569dad9df3d7248e79e6a44ef4c9ad827fb67acd97b192ab3ecf1fb89836
+EBUILD nagios-plugins-1.4.11.ebuild 3640 RMD160 11a70d7a45d583a3e7b39097bc08cb63ccea528c SHA1 ad72e7553f476d3476e95900e8df3c49dc0dde3f SHA256 ba656d2abcd9e141dcacea7cf359ac56aa35825551af02554eaa9174c99a1283
+MISC ChangeLog 1036 RMD160 195cdf5ae1ee70741bf7c015b1908ffbae46db9e SHA1 df1d814000fc14dacc70ad07a29fcd64935115b0 SHA256 ad93185b9a681e3e85b8b05c40b9972d3620fc6fefbf9081097508def59bba3c
 MISC metadata.xml 374 RMD160 c261e08c2be47cbf618ed122151d25f96a176aa9 SHA1 88da42b8cc7c08339067720081f61c110e00acb5 SHA256 4babbe654b066c416bb453a8decbd1e8bdaf450226d9ed6d4380bf17e5761f59
