@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/nagios-plugins-1.4.11.ebuild,v 1.7 2008/05/19 20:08:49 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/nagios-plugins-1.4.11.ebuild,v 1.8 2008/05/21 18:09:33 dertobi123 Exp $
 
 WANT_AUTOCONF="latest"
 WANT_AUTOMAKE="latest"
@@ -70,7 +70,7 @@ src_compile() {
 
 	econf \
 		$(use_with mysql) \
-		$(use_with postgres) \
+		$(use_with postgres pgsql) \
 		$(use_with ipv6) \
 		${conf} \
 		--host=${CHOST} \
