@@ -1,6 +1,12 @@
 # ChangeLog for net-analyzer/nagios-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.89 2008/05/19 20:08:49 dev-zero Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.90 2008/05/21 18:09:33 dertobi123 Exp $
+
+  21 May 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  nagios-plugins-1.4.11.ebuild, nagios-plugins-1.4.11-r1.ebuild,
+  nagios-plugins-1.4.11-r102.ebuild:
+  USE=postgres should set --with-pgsql, reported by Krzysztof Tomczyk
+  (#222317)
 
   19 May 2008; Tiziano Müller <dev-zero@gentoo.org>
   nagios-plugins-1.4.11.ebuild, nagios-plugins-1.4.11-r1.ebuild:
